--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "backend.schulz-hygiene.de",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "@types/lodash": "^4.14.191",
-    "axios": "^1.3.4",
-    "bootstrap-icons": "^1.10.4",
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.0",
-    "vuex-class": "^0.3.2"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "node-sass": "^8.0.0",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.2",
-    "typescript": "~4.5.5",
-    "vue-loader": "^17.0.1"
-  }
+	"name": "backend.schulz-hygiene.de",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
+		"lint": "vue-cli-service lint"
+	},
+	"dependencies": {
+		"@types/lodash": "^4.14.191",
+		"axios": "^1.3.4",
+		"bootstrap-icons": "^1.10.4",
+		"core-js": "^3.8.3",
+		"vue": "^3.2.36",
+		"vue-class-component": "^8.0.0-0",
+		"vue-class-decorator": "^7.6.3",
+		"vue-router": "^4.0.13",
+		"vuex": "^4.0.0",
+		"vuex-class": "^0.3.2"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.4.0",
+		"@typescript-eslint/parser": "^5.4.0",
+		"@vue/cli-plugin-babel": "~5.0.0",
+		"@vue/cli-plugin-eslint": "~5.0.0",
+		"@vue/cli-plugin-router": "~5.0.0",
+		"@vue/cli-plugin-typescript": "~5.0.0",
+		"@vue/cli-plugin-vuex": "~5.0.0",
+		"@vue/cli-service": "~5.0.0",
+		"@vue/eslint-config-typescript": "^9.1.0",
+		"eslint": "^7.32.0",
+		"eslint-plugin-vue": "^8.0.3",
+		"node-sass": "^8.0.0",
+		"sass-loader": "^12.6.0",
+		"style-loader": "^3.3.2",
+		"typescript": "~4.5.5",
+		"vue-loader": "^17.0.1"
+	}
 }
